--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 #
 /[Ll]ibrary/
 /[Tt]emp/
+/[Bb]in/
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
@@ -61,6 +62,7 @@ crashlytics-build.properties
 Library/
 Temp/
 obj/
+bin/
 Build/
 Builds/
 Logs/
